security: make public account capacity recoverable
